# checkerlang-py

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
ckl/: date.py  errors.py  functions.py  interpreter.py  lexer.py  nodes.py  parser.py  repl.py  run.py  values.py
ckl/modules/: base.ckl  core.ckl  date.ckl  legacy.ckl  math.ckl  random.ckl  set.ckl  sys.ckl
src/ckl/: date.py  errors.py  functions.py  lexer.py  nodes.py
src/ckl/modules/: bitwise.ckl  core.ckl  io.ckl  list.ckl  os.ckl  predicate.ckl  stat.ckl  string.ckl  type.ckl
tests/: test_collectvars.py  test_date.py  test_infotests.py  test_interpreter.py  test_lexer.py  test_parser.py  update_tests.py
