[project]
name = "ckl"
version = "3.5.9"

description = "CKL programming language"
authors = [
    {name="Damian Brunold", email="dab@dabsoft.ch"}
]
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ckl-run = "ckl.run:main"
ckl-repl = "ckl.repl:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
